fixes jumping tables in the editor due to Stackable (#394)

--- a/web/wp-content/themes/lfevents/src/assets/scss/editor.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/editor.scss
@@ -298,3 +298,8 @@ body {
 .wp-block-latest-posts.is-grid{
 	list-style: none;
 }
+
+// Fix for Stackable weird behavior with tables.
+figure.wp-block-table tr div.components-dropdown {
+	display: none;
+  }
